--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,7 @@
 .nav {
   width: 100%;
-  height: 50px;
-  line-height: 50px;
+  height: var(--nav-height);
+  line-height: var(--nav-height);
   font-weight: bold;
   position: fixed;
   display: flex;
@@ -17,7 +17,7 @@
   content: '';
   display: block;
   position: fixed;
-  top: 50px;
+  top: calc(var(--nav-height) - 1px);
   left: 0;
   width: 100%;
   height: 6px;
